meta. a page talks about itself

--- a/app/views/documentation/what_is_new.html.haml
+++ b/app/views/documentation/what_is_new.html.haml
@@ -9,6 +9,7 @@
   * In the API add support for atom feeds. Thank you to [@pezholio](https://github.com/pezholio) for this!
     It works in a really flexible way where you can make any field of your data map to different
     bits of the atom feed like the content and the link in each item. [Have a look](#{api_documentation_index_path}).
+  * Added this "What's new" page
 
   ### April 17
   * Morph now only needs to ask you for public repository read/write permissions for GitHub.
