--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -12,7 +12,7 @@
   * [Your responsibility](#responsibility)
 
   <h3 id="languages" class="section">What languages can scrapers be written in?</h3>
-  Scrapers can be written in [Ruby](https://www.ruby-lang.org/en/), [PHP](http://www.php.net/) or Python.
+  Scrapers can be written in [Ruby](https://www.ruby-lang.org/en/), [PHP](http://www.php.net/) or [Python](https://www.python.org/).
   Simply follow the naming convention:
 
   * Ruby - `scraper.rb`
