--- a/app/views/static/_marketing.html.haml
+++ b/app/views/static/_marketing.html.haml
@@ -18,7 +18,8 @@
           = link_to "GitHub", "https://github.com/"
         %li
           Write your scrapers in #{link_to "Ruby", "https://www.ruby-lang.org"},
-          #{link_to "Python", "http://www.python.org"} or #{link_to "PHP", "http://www.php.net"}
+          #{link_to "Python", "http://www.python.org"}, #{link_to "PHP", "http://www.php.net"}
+          or #{link_to "Perl", "http://www.perl.org/"}
         %li
           Simple API to grab data
         %li
