--- a/app/views/runs/_history.html.haml
+++ b/app/views/runs/_history.html.haml
@@ -1,4 +1,4 @@
-- cache ["v4", run] do
+- cache ["v5", run] do
   %li.list-group-item{class: run.finished_successfully? ? "alert-success" : "alert-danger"}
     - if run.auto?
       Auto
@@ -21,3 +21,7 @@
         = "%.1f s" % run.wall_time
       %div
     %div= database_changes_in_words(run)
+    %div
+      - if run.connection_logs.count > 0
+        = pluralize(run.connection_logs.count, "page")
+        scraped
