Copy across aph styles

--- a/app/views/examples/australian_members_of_parliament.html.erb
+++ b/app/views/examples/australian_members_of_parliament.html.erb
@@ -14,7 +14,7 @@
      &ndash; Parliament of Australia
 </title><meta name="DCTERMS.Description" content="Senators &amp; Members Search Results" /><meta name="DCTERMS.creator" content="corporateName=Commonwealth Parliament; address=Parliament House, Canberra, ACT, 2600; contact=+61 2 6277 7111;" /><meta name="DCTERMS.title" content="Senators &amp; Members Search Results" /><meta name="DCTERMS.subject" content="Senators &amp; Members Search Results" /><meta name="DCTERMS.created" content="2011-01-19" /><meta name="DCTERMS.modified" content="2013-02-19" /><meta name="DCTERMS.type" content="text" /><meta name="DCTERMS.coverage" content="Australia" /><meta name="DCTERMS.identifier" content="http://www.aph.gov.au/Senators_and_Members/Parliamentarian_Search_Results?expand=1&amp;q=&amp;mem=1&amp;par=-1&amp;gen=0&amp;ps=50&amp;st=1" /><meta name="DCTERMS.publisher" content="corporateName=Commonwealth Parliament; address=Parliament House, Canberra, ACT, 2600; contact=+61 2 6277 7111" /><meta name="DCTERMS.rights" content="http://www.aph.gov.au/Help/Disclaimer_Privacy_Copyright" /><meta name="DCTERMS.rightsHolder" content="Commonwealth of Australia" /><meta name="DCTERMS.license" content="Creative Commons - Attribution-NonCommercial-NoDerivs 3.0 Australia (CC BY-NC-ND 3.0 AU)" /><meta name="DCTERMS.language" content="en-AU" /><meta name="DCTERMS.format" content="text/html" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><link rel="shortcut icon" href="/favicon.ico" />
 
-    <link rel="stylesheet" href="/css/style.css?v=2" />
+    <link rel="stylesheet" href="/assets/examples/style.css" />
 
     <link rel="stylesheet" media="handheld" href="/css/handheld.css?v=2" />
     <link rel="stylesheet" href="/css/aph-theme/jquery-ui-1.8.6.custom.css" />
