Not using background image anymore

--- a/app/views/examples/australian_members_of_parliament.html.erb
+++ b/app/views/examples/australian_members_of_parliament.html.erb
@@ -14,7 +14,7 @@
 </head>
 <body id="body">
 
-        <div id="bgimagewrapper" style="background-image: url(/assets/examples/body-home-day-blurred.jpg);">
+        <div id="bgimagewrapper"">
             <div id="container">
 
 <a name="top"></a>
