Add a little description at the top

--- a/app/views/examples/australian_members_of_parliament.html.erb
+++ b/app/views/examples/australian_members_of_parliament.html.erb
@@ -34,6 +34,8 @@
 
 <h1>Senators & Members Search Results</h1>
 
+<h2>This page is a simplified version of the <a href="http://www.aph.gov.au/Senators_and_Members/Parliamentarian_Search_Results?q=&mem=1&par=-1&gen=0&ps=0">official list of Australian federal members of parliament</a>. It exists so that you can scrape it with morph.io! </h2>
+
 
 <div class="box" onkeypress="javascript:return WebForm_FireDefaultButton(event, &#39;btnSubmit&#39;)">
 
