Reference assets correctly so they work in production

--- a/app/views/examples/australian_members_of_parliament.html.erb
+++ b/app/views/examples/australian_members_of_parliament.html.erb
@@ -9,8 +9,7 @@
 
      &ndash; Parliament of Australia
 </title>
-
-    <link rel="stylesheet" href="/assets/examples/style.css" />
+		<%= stylesheet_link_tag "examples/style.css" %>
 </head>
 <body id="body">
 
