--- a/app/assets/stylesheets/examples/style.css.scss
+++ b/app/assets/stylesheets/examples/style.css.scss
@@ -547,7 +547,7 @@ a.rssfeed {background:url(/images/template/rss.gif) no-repeat left top;padding-l
 
 #social {padding:0;list-style: none;float:right;}
 #social li {float:left;display:inline;}
-#social li a {display:block;width:20px;height:20px;background:url(/assets/examples/social-sprite.png) no-repeat left top;margin:0 0 0 5px;}
+#social li a {display:block;width:20px;height:20px;background:image-url("examples/social-sprite.png") no-repeat left top;margin:0 0 0 5px;}
 #social li a span {position: absolute;left: -9999px;width: 900px;}
 
 #social li.share a {background:none;width:auto;height:auto;position: relative;top:3px;color:#666;margin: 0 2px 0 0;}
@@ -711,7 +711,7 @@ a.button {text-indent: -9999px;overflow:hidden;float:left;display:inline;/* outl
 a.button:hover {}
 a.button:active {position: relative;top:1px;left:1px;}
 
-.btn-contact-form {background:url(/assets/examples/contact.png) no-repeat left top;width:78px;}
+.btn-contact-form {background:image-url("examples/contact.png") no-repeat left top;width:78px;}
 .btn-contact-form:hover {background-position: 0 -20px;}
 .btn-track-this-senator {width:112px;background:url(/images/template/buttons/track-this-senator-onred.png) no-repeat left top;}
 .btn-search {background:url(/images/template/buttons/search.png) no-repeat left top;width:78px;}
@@ -747,7 +747,7 @@ input.button {text-indent: -9999px;text-transform: uppercase;overflow: hidden;he
 input.button:hover {cursor:pointer;}
 input.button:active {position: relative;top:1px;left:1px;}
 
-a.social {display:inline;width:20px;height:20px;background:url(/assets/examples/social-sprite.png) no-repeat 0px 0;text-indent:-9999px;/* outline:0; */float:left;margin:0 5px 0 0;}
+a.social {display:inline;width:20px;height:20px;background:image-url("examples/social-sprite.png") no-repeat 0px 0;text-indent:-9999px;/* outline:0; */float:left;margin:0 5px 0 0;}
 a.twitter {background-position: -40px 0;}
 a.facebook {background-position: -60px 0;}
 
@@ -865,13 +865,13 @@ a.facebook {background-position: -60px 0;}
 .results-pagination .page-controls ul {list-style: none;padding:0;position: absolute;top:8px;right:10px;}
 .results-pagination .page-controls ul li {display: inline;float:left;margin:0 0 0 7px;}
 .results-pagination .page-controls ul li.button a, .results-pagination .page-controls ul li.inactive span {width:11px;height:11px;text-indent: -9999px;overflow: hidden;display:block;position: relative;top:3px;}
-.results-pagination .page-controls ul li.prev a, .results-pagination .page-controls ul li.prev span {background:url(/assets/examples/position-arrows.png) no-repeat -11px 0;}
+.results-pagination .page-controls ul li.prev a, .results-pagination .page-controls ul li.prev span {background:image-url("examples/position-arrows.png") no-repeat -11px 0;}
 .results-pagination .page-controls ul li.prev a:hover {background-position:-11px -11px;}
-.results-pagination .page-controls ul li.next a, .results-pagination .page-controls ul li.next span {background:url(/assets/examples/position-arrows.png) no-repeat -22px 0;}
+.results-pagination .page-controls ul li.next a, .results-pagination .page-controls ul li.next span {background:image-url("examples/position-arrows.png") no-repeat -22px 0;}
 .results-pagination .page-controls ul li.next a:hover {background-position: -22px -11px;}
-.results-pagination .page-controls ul li.first a, .results-pagination .page-controls ul li.first span {background:url(/assets/examples/position-arrows.png) no-repeat 0 0;}
+.results-pagination .page-controls ul li.first a, .results-pagination .page-controls ul li.first span {background:image-url("examples/position-arrows.png") no-repeat 0 0;}
 .results-pagination .page-controls ul li.first a:hover {background-position: 0 -11px;}
-.results-pagination .page-controls ul li.last a, .results-pagination .page-controls ul li.last span {background:url(/assets/examples/position-arrows.png) no-repeat -33px 0;}
+.results-pagination .page-controls ul li.last a, .results-pagination .page-controls ul li.last span {background:image-url("examples/position-arrows.png") no-repeat -33px 0;}
 .results-pagination .page-controls ul li.last a:hover {background-position: -33px -11px;}
 
 .results-pagination .sort-controls {background:#E8E8E8;padding:8px 10px;position: relative;overflow: hidden;}
@@ -1151,7 +1151,7 @@ ul.dash li {background:url(/images/template/dash.png) no-repeat left center;padd
 .document-section-control ul li.start a {position: absolute;top:0;left:0px;}
 .document-section-control ul li.end a {position: absolute;top:0;right:0px;}
 
-.document-section-control ul li a span {width:11px;height:11px;position: absolute;top:3px;left:10px;text-indent: -9999px;overflow: hidden;background:url(/assets/examples/position-arrows.png) no-repeat 0 0;}
+.document-section-control ul li a span {width:11px;height:11px;position: absolute;top:3px;left:10px;text-indent: -9999px;overflow: hidden;background:image-url("examples/position-arrows.png") no-repeat 0 0;}
 
 .document-section-control ul li.prev a span {background-position: -11px 0;left:10px;}
 .document-section-control ul li.prev a:hover span {background-position: -11px -11px;}
