--- a/app/views/sync/scrapers/refetch/_show_partial.html.haml
+++ b/app/views/sync/scrapers/refetch/_show_partial.html.haml
@@ -1,5 +1,5 @@
 %div
-  - if scraper.forking?
+  - if scraper.create_scraper_progress || scraper.forking?
     = render partial: "scrapers/show_forking", locals: {scraper: scraper}
   - else
     = render partial: "scrapers/show_normal", locals: {scraper: scraper}
