--- a/app/views/scrapers/_show_forking.html.haml
+++ b/app/views/scrapers/_show_forking.html.haml
@@ -1,7 +1,7 @@
 %h1.full_name= full_name_with_links(scraper)
 %h2 Forking!
 .progress.progress-striped.active
-  .progress-bar(style="width: #{scraper.create_scraper_progress.progress == 0 ? 5 : scraper.create_scraper_progress.progress}%")
+  .progress-bar(style="width: #{scraper.create_scraper_progress.progress}%")
     - if scraper.create_scraper_progress.message
       = scraper.create_scraper_progress.message
       &hellip;
