--- a/app/views/scrapers/_show_forking.html.haml
+++ b/app/views/scrapers/_show_forking.html.haml
@@ -1,5 +1,5 @@
 %h1.full_name= full_name_with_links(scraper)
-%h2 Forking!
+%h2= scraper.create_scraper_progress.heading
 .progress.progress-striped.active
   .progress-bar(style="width: #{scraper.create_scraper_progress.progress}%")
     - if scraper.create_scraper_progress.message
