--- a/app/views/scrapers/_settings.html.haml
+++ b/app/views/scrapers/_settings.html.haml
@@ -6,5 +6,9 @@
     %input(name="scraper[auto_run]" type="hidden" value="0")
     = f.input :auto_run, hint: "Automatically run this scraper once per day", input_html: {disabled: !@scraper.can_write?(current_user)}
   - if @scraper.can_write?(current_user)
+    #variables
+      = f.semantic_fields_for :variables do |variable|
+        = render "variable_fields", f: variable
+      = link_to_add_association 'add secret environment variable', f, :variables
     = f.actions do
       = f.action :submit, :label => "Update settings"
