Restrict env variable names in real time

--- a/app/views/scrapers/_variable_fields.html.haml
+++ b/app/views/scrapers/_variable_fields.html.haml
@@ -2,7 +2,7 @@
   = f.inputs do
     .row
       .col-sm-3
-        = f.input :name
+        = f.input :name, input_html: {class: "name"}
       .col-sm-8
         = f.input :value
       .col-sm-1
