Updated what is new. Fixes #337

--- a/app/views/documentation/what_is_new.html.haml
+++ b/app/views/documentation/what_is_new.html.haml
@@ -5,6 +5,29 @@
   hood. If you're interested in seeing those too, look at the
   [full list of commits](https://github.com/openaustralia/morph/commits/master).
 
+  ### May 17
+  For the case where people need to use secret keys in their scrapers (for instance
+  accessing an API that requires them), you can now set one or more environment variables in the
+  web interface that can be used in your scraper. Each scraper can have its own set
+  of environment variables. The variables are viewable only by
+  you or people who have write access to that scraper.
+
+  Go to the scraper settings to access.
+
+  ### May 5
+  Added progress bar during the creation of a new scraper and adding a scraper from GitHub.
+
+  ### May 1
+  Unfortunately we had our first case of abuse today. So, we suspended a user which of course
+  involved us adding support for suspending a user!
+
+  ### April 26
+  There's now an [example page that you can try out your scraping skills on](#{examples_australian_members_of_parliament_documentation_index_path}). It's based on the official
+  list of Australian members of parliament.
+
+  ### April 19
+  You can now write scrapers in Perl thanks to the effort of [@lkundrak](/lkundrak).
+
   ### April 18
   * In the API add support for atom feeds. Thank you to [@pezholio](https://github.com/pezholio) for this!
     It works in a really flexible way where you can make any field of your data map to different
