--- a/app/views/documentation/what_is_new.html.haml
+++ b/app/views/documentation/what_is_new.html.haml
@@ -14,6 +14,8 @@
 
   Go to the scraper settings to access.
 
+  On creating a scraper you can now optionally add a description.
+
   ### May 5
   Added progress bar during the creation of a new scraper and adding a scraper from GitHub.
 
