Use default formatting of error messages from formtastic-bootstrap

--- a/app/views/scrapers/scraperwiki.html.haml
+++ b/app/views/scrapers/scraperwiki.html.haml
@@ -23,24 +23,12 @@
           - if @name_set
             = f.hidden_field :scraperwiki_shortname
           - else
-            .string.input.optional.stringish.form-group#scraper_scraperwiki_shortname_input{class: ("error has-error" unless @scraper.errors[:scraperwiki_shortname].empty?)}
-              %label.control-label(for="scraper_scraperwiki_shortname") Name of ScraperWiki scraper
-              %input.form-control#scraper_scraperwiki_shortname{maxlength: "255", name:"scraper[scraperwiki_shortname]", placeholder:"city_of_sydney_development_applications", type:"text", value:"#{@scraper.scraperwiki_shortname}", class:("error" unless @scraper.errors[:scraperwiki_shortname].empty?)}
-              - @scraper.errors.full_messages_for(:scraperwiki_shortname).each do |m|
-                .alert.alert-warning= m
-              %span.help-block The name (as it's shown in a url) of the ScraperWiki Classic scraper that you want to fork
+            = f.input :scraperwiki_shortname, label: "Name of ScraperWiki scraper", hint: "The name (as it's shown in a url) of the ScraperWiki Classic scraper that you want to fork", placeholder:"city_of_sydney_development_applications"
       .row
         .col-sm-2
           = f.input :owner, collection: current_user.all_owners.map{|o| [o.nickname, o.id]}, include_blank: false
         .col-sm-6
-          .string.input.optional.stringish.form-group#scraper_name_input{class: ("error has-error" unless @scraper.errors[:name].empty?)}
-            %label.control-label(for="scraper_name") Name
-            .input-group
-              %span.input-group-addon /
-              %input.form-control#scraper_name{maxlength: "255", name:"scraper[name]", placeholder:"city_of_sydney_development_applications", type:"text", value:"#{@scraper.name}", class:("error" unless @scraper.errors[:name].empty?)}
-            - @scraper.errors.full_messages_for(:name).each do |m|
-              .alert.alert-warning= m
-            %span.help-block Name to give the scraper here and on GitHub
+          = f.input :name, prepend: "/", hint: "Name to give the scraper here and on GitHub", placeholder:"city_of_sydney_development_applications"
 
     = f.actions do
       = f.action :submit, label: "Fork ScraperWiki scraper"
