--- a/app/views/scrapers/_github_form.html.haml
+++ b/app/views/scrapers/_github_form.html.haml
@@ -1,8 +1,10 @@
-= semantic_form_for @scraper, url: github_scrapers_path do |f|
-  = f.inputs do
-    = f.input :full_name, as: :radio, collection: @repos.map{|r| [radio_description(r), r.full_name]}, label: "GitHub Repository", include_blank: false
-  = f.actions do
-    = f.action :submit, label: "Add Scraper"
+- @nicknames.each do |nickname|
+  %h3= nickname
+  = semantic_form_for @scraper, url: github_scrapers_path do |f|
+    = f.inputs do
+      = f.input :full_name, as: :radio, collection: current_user.github_public_repos(nickname).map{|r| [radio_description(r), r.full_name]}, label: "GitHub Repository", include_blank: false
+    = f.actions do
+      = f.action :submit, label: "Add Scraper"
 
 :javascript
   $("#scraper_submit_action").attr("disabled", true);
