--- a/app/views/scrapers/_github_forms.html.haml
+++ b/app/views/scrapers/_github_forms.html.haml
@@ -4,9 +4,27 @@
     %li= link_to name, "#org_#{name}", data: {toggle: "tab"}
 
 .tab-content
-  .tab-pane.active#user= render partial: "github_form", locals: {nickname: current_user.nickname}
+  .tab-pane.active#user
+    %h3= current_user.nickname
+    #user_content
+      %p
+        %i.icon-github.icon-2x.icon-spin
+        Hang on. Getting your repositories from GitHub&hellip;
+    :javascript
+      $(document).ready(function(){
+        $("#user_content").load("#{github_form_scrapers_path(nickname: current_user.nickname)}")
+      });
   - current_user.org_names.each do |nickname|
-    .tab-pane{id: "org_#{nickname}"}= render partial: "github_form", locals: {nickname: nickname}
+    .tab-pane{id: "org_#{nickname}"}
+      %h3= nickname
+      %div{id: "org_#{nickname}_content"}
+        %p
+          %i.icon-github.icon-2x.icon-spin
+          Hang on. Getting your repositories from GitHub&hellip;
+      :javascript
+        $(document).ready(function(){
+          $("#org_#{nickname}_content").load("#{github_form_scrapers_path(nickname: nickname)}")
+        });
 
 :javascript
   $("#scraper_submit_action").attr("disabled", true);
