--- a/app/views/scrapers/github.html.haml
+++ b/app/views/scrapers/github.html.haml
@@ -11,31 +11,31 @@
   -# TODO Don't show repos that we've already added
 
   %ul.nav.nav-tabs
-    %li.active= link_to current_user.nickname, "#user", data: {toggle: "tab"}
+    %li.active= link_to current_user.nickname, "#owner_#{current_user.nickname}", data: {toggle: "tab"}
     - current_user.org_names.each do |name|
-      %li= link_to name, "#org_#{name}", data: {toggle: "tab"}
+      %li= link_to name, "#owner_#{name}", data: {toggle: "tab"}
 
   .tab-content
-    .tab-pane.active#user
+    .tab-pane.active{id: "owner_#{current_user.nickname}"}
       %h3= current_user.nickname
-      #user_content
+      %div{id: "owner_#{current_user.nickname}_content"}
         %p
           %i.icon-github.icon-2x.icon-spin
           Hang on. Getting your repositories from GitHub&hellip;
       :javascript
         $(document).ready(function(){
-          $("#user_content").load("#{github_form_scrapers_path(nickname: current_user.nickname)}")
+          $("#owner_#{current_user.nickname}_content").load("#{github_form_scrapers_path(nickname: current_user.nickname)}")
         });
     - current_user.org_names.each do |nickname|
-      .tab-pane{id: "org_#{nickname}"}
+      .tab-pane{id: "owner_#{nickname}"}
         %h3= nickname
-        %div{id: "org_#{nickname}_content"}
+        %div{id: "owner_#{nickname}_content"}
           %p
             %i.icon-github.icon-2x.icon-spin
             Hang on. Getting your repositories from GitHub&hellip;
         :javascript
           $(document).ready(function(){
-            $("#org_#{nickname}_content").load("#{github_form_scrapers_path(nickname: nickname)}")
+            $("#owner_#{nickname}_content").load("#{github_form_scrapers_path(nickname: nickname)}")
           });
 
   :javascript
