--- a/app/views/scrapers/github.html.haml
+++ b/app/views/scrapers/github.html.haml
@@ -11,16 +11,16 @@
   -# TODO Don't show repos that we've already added
 
   %ul.nav.nav-tabs
-    %li.active= link_to current_user.nickname, "#owner_#{current_user.nickname}", data: {toggle: "tab"}
-    - current_user.org_names.each do |name|
-      %li= link_to name, "#owner_#{name}", data: {toggle: "tab"}
+    %li.active= link_to @user.nickname, "#owner_#{@user.nickname}", data: {toggle: "tab"}
+    - @organizations.each do |org|
+      %li= link_to org.nickname, "#owner_#{org.nickname}", data: {toggle: "tab"}
 
   .tab-content
-    .tab-pane.active{id: "owner_#{current_user.nickname}"}
-      = render partial: "github_form_loader", locals: {nickname: current_user.nickname}
-    - current_user.org_names.each do |nickname|
-      .tab-pane{id: "owner_#{nickname}"}
-        = render partial: "github_form_loader", locals: {nickname: nickname}
+    .tab-pane.active{id: "owner_#{@user.nickname}"}
+      = render partial: "github_form_loader", locals: {nickname: @user.nickname}
+    - @organizations.each do |org|
+      .tab-pane{id: "owner_#{org.nickname}"}
+        = render partial: "github_form_loader", locals: {nickname: org.nickname}
 
   :javascript
     $("#scraper_submit_action").attr("disabled", true);
