--- a/app/views/scrapers/_github_form_loader.html.haml
+++ b/app/views/scrapers/_github_form_loader.html.haml
@@ -1,9 +1,9 @@
-%h3= nickname
-%div{id: "owner_#{nickname}_content"}
+%h3= owner.nickname
+%div{id: "owner_#{owner.nickname}_content"}
   %p
     %i.icon-github.icon-2x.icon-spin
     Hang on. Getting your repositories from GitHub&hellip;
 :javascript
   $(document).ready(function(){
-    $("#owner_#{nickname}_content").load("#{github_form_scrapers_path(nickname: nickname)}")
+    $("#owner_#{owner.nickname}_content").load("#{github_form_scrapers_path(id: owner.id)}")
   });
