--- a/app/views/scrapers/_github_form.html.haml
+++ b/app/views/scrapers/_github_form.html.haml
@@ -1,5 +1,11 @@
 = semantic_form_for @scraper, url: github_scrapers_path do |f|
   = f.inputs do
-    = f.input :full_name, as: :radio, collection: Morph::Github.public_repos(current_user, owner).map{|r| [radio_description(r), r.full_name]}, label: false, include_blank: false
+    = f.input :full_name, as: :radio, collection: Morph::Github.public_repos(current_user, owner).map{|r| [radio_description(r), r.full_name]}, label: false, include_blank: false, input_html: {class: "owner_#{owner.nickname}"}
   = f.actions do
-    = f.action :submit, label: "Add Scraper"
+    = f.action :submit, label: "Add Scraper", button_html: {id: "#{owner.nickname}_scraper_submit_action"}
+
+:javascript
+  $("##{owner.nickname}_scraper_submit_action").attr("disabled", true);
+  $("input[type=radio].owner_#{owner.nickname}").change(function(){
+    $("##{owner.nickname}_scraper_submit_action").attr("disabled", false);
+  });
