--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -35,9 +35,9 @@
               %p
                 - @owner.users.each do |user|
                   = link_to owner_image(user, 30), user
-        - if @owner == current_user
+        - if @owner == current_user || (@owner.user? && current_user.admin?)
           %div
-            = button_link_to "Show your key", user_settings_path(current_user)
+            = button_link_to "Settings", user_settings_path(@owner)
       .col-md-2.owner-box
         - if signed_in?
           .pull-right= render partial: "watch_button", locals: {owner: @owner}
